[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "zrs"
version = "0.1.7"

description = "Jump to recently used directories"
repository = "https://github.com/FauxFaux/zrs"
readme = "README.md"

categories = ["command-line-utilities", "development-tools"]
license = "MIT OR Apache-2.0"

edition = "2018"

[dependencies]
anyhow = "1"
dirs = "3"
regex = "1"
tempfile = "3"
twoway = "0.2"
nix = "0.18"

[dependencies.clap]
default-features = false
version = "2"

[profile.release]
lto = true
