[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "zrs"
version = "0.1.9"

description = "Jump to recently used directories"
repository = "https://github.com/FauxFaux/zrs"
readme = "README.md"

categories = ["command-line-utilities", "development-tools"]
license = "MIT OR Apache-2.0"

edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
dirs = "6"
regex = "1"
tempfile = "3"
twoway = "0.2"
nix = { version = "0.29", features = ["fs", "process", "user"] }

[profile.release]
lto = true
